syntax = "proto3";

package chatbox.proto.v1;
option go_package = "github.com/chatbox/proto/v1/user";

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string user_email = 4;
}